# ECC-from-scratch

./: .gitignore  README.md  pyproject.toml
src/: curve.py  ecdh.py  ecdsa.py  examples.py  field.py
tests/: test_ecc.py
